--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ nav #btn-nav{
 }
 /* Bloc 1 */
 #bloc-1{
- background: url(/img/bg.jpg) center/cover;
+ background: url(./img/bg.jpg) center/cover;
 text-align: center;
 color: white;
 padding: 80px;
@@ -99,7 +99,7 @@ h1{
    
 }
 #bloc-2 p{
-    font-family: "font-2";
+    font-family: "font-2", Arial, Helvetica, sans-serif;
     text-align: center;
     margin-top: 10px;
 } 
@@ -117,7 +117,10 @@ h1{
 display: flex;
 justify-content: space-around;
 align-items: center;
-margin-top: 80px;
+padding: 80px;
+background: rgb(245, 244, 244);
+width: 100%;
+
  }
  #bloc-3 h2{
      font-family: "font-1";
@@ -144,7 +147,8 @@ margin-top: 80px;
     text-align: center;
     justify-items: center;
     justify-content: space-between; 
-    padding-top: 90px;
+    background: rgb(245, 244, 244);
+    line-height: 18px;
  }
 #bloc-4 > div{
     padding: 30px;
@@ -186,6 +190,64 @@ margin-top: 80px;
     font-size: 0.6rem;
 }
 /* bloc 5 */
+/*
+#bloc-5{
+    margin-top: 90px;
+    width: 100%;
+    font-family: 'font-1',Arial, Helvetica, sans-serif;
+}
+#bloc-5-child{
+    display: flex;  
+    justify-content: center; 
+}
+#bloc-5-child > div{
+    width: 100%;
+    height: 100%;
+}
+#infos-pratiques{
+    text-align: left;  
+}
+#infos-pratiques ul li{
+font-size: 0.8rem;
+margin-top: 15px;
+color: rgb(80, 80, 233);
+}
+#parents{
+text-align: left;
+}
+#parents p{
+    margin-top: 15px;
+    font-size: 0.8rem;
+   line-height: 20px;
+   font-family: "font-2", Arial, Helvetica, sans-serif;
+    font-weight:lighter;
+}
+.btn-bloc5{
+    margin-top: 15px;
+    background: none;
+    border: none;
+    color: rgb(80, 80, 233);
+
+}
+#nous-contacter{
+    display: flex;
+    flex-direction: column;
+}
+#nous-contacter ul{
+    margin-top: 10px;
+    font-family: "font-1", Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+    font-size: 0.8rem;
+}
+#nous-contacter h3{
+    margin-top: 15px;
+}
+#reseaux{
+    display: flex;
+    align-items: center;
+}
+*/
+
  #bloc-5{
      display: flex;
      text-align: center;
@@ -195,7 +257,8 @@ margin-top: 80px;
  }
 
  #bloc-5 > div{
-     width: 100%;
+     width: 23%;
+     justify-content: center;
  }
  #bloc-5 div h3{
      font-size: 1rem;
@@ -245,8 +308,11 @@ position: relative;
     font-size: 0.8rem;
 }
 #nous-contacter h3{
-    margin-top: 15px;
+    margin-top: 5px;
+}#nous-contacter li{
+    margin-top: 8px;
 }
+
 #reseaux{
     display: grid;
     grid-template-columns: 8% 8% 8% 8%;   
@@ -293,7 +359,10 @@ text-transform: uppercase;
     font-family: "font-1", Arial, Helvetica, sans-serif;
     font-size: 0.8rem;
     margin-top: 10px;
-   
+ }
+ #nous-contacter span{
+    font-family: "font-1", Arial, Helvetica, sans-serif;
+    font-size: 0.8rem;
  }
 /* footer */
  footer{
