--- a/style.css
+++ b/style.css
@@ -24,16 +24,21 @@ li{
 a{text-decoration: none;}
 
 /* HEADER */
-header nav ul{
+header nav ul{ 
 display: flex; 
 align-items: center;
 justify-content: space-around;
 text-transform: uppercase;
 font-size: 1rem;
-color: black;
+color: rgb(0, 0, 0);
 margin-top: 10px;
 font-family: "font-1", Arial, Helvetica, sans-serif;
 font-weight: bold;
+}
+header nav ul li{
+    color: black;
+    font-family: "font-2", Arial, Helvetica, sans-serif;
+    font-size: 0.8rem;
 }
 nav #btn-nav{
     background: rgb(216, 212, 212);
@@ -118,7 +123,7 @@ display: flex;
 justify-content: space-around;
 align-items: center;
 padding: 80px;
-background: rgb(245, 244, 244);
+
 width: 100%;
 
  }
@@ -127,7 +132,6 @@ width: 100%;
      text-transform: uppercase;
      font-weight:lighter;
      letter-spacing: 5px;
-  
  }
  .btn-bloc3{
      width: 150px;
@@ -147,7 +151,6 @@ width: 100%;
     text-align: center;
     justify-items: center;
     justify-content: space-between; 
-    background: rgb(245, 244, 244);
     line-height: 18px;
  }
 #bloc-4 > div{
@@ -190,75 +193,20 @@ width: 100%;
     font-size: 0.6rem;
 }
 /* bloc 5 */
-/*
-#bloc-5{
-    margin-top: 90px;
-    width: 100%;
-    font-family: 'font-1',Arial, Helvetica, sans-serif;
-}
-#bloc-5-child{
-    display: flex;  
-    justify-content: center; 
-}
-#bloc-5-child > div{
-    width: 100%;
-    height: 100%;
-}
-#infos-pratiques{
-    text-align: left;  
-}
-#infos-pratiques ul li{
-font-size: 0.8rem;
-margin-top: 15px;
-color: rgb(80, 80, 233);
-}
-#parents{
-text-align: left;
-}
-#parents p{
-    margin-top: 15px;
-    font-size: 0.8rem;
-   line-height: 20px;
-   font-family: "font-2", Arial, Helvetica, sans-serif;
-    font-weight:lighter;
-}
-.btn-bloc5{
-    margin-top: 15px;
-    background: none;
-    border: none;
-    color: rgb(80, 80, 233);
-
-}
-#nous-contacter{
-    display: flex;
-    flex-direction: column;
-}
-#nous-contacter ul{
-    margin-top: 10px;
-    font-family: "font-1", Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-    font-size: 0.8rem;
-}
-#nous-contacter h3{
-    margin-top: 15px;
-}
-#reseaux{
-    display: flex;
-    align-items: center;
-}
-*/
 
  #bloc-5{
      display: flex;
      text-align: center;
-     justify-content: center;
+     
      justify-items: center;
+     justify-content: space-around;
      margin-top: 150px;
  }
 
  #bloc-5 > div{
-     width: 23%;
+     width: 20%;
      justify-content: center;
+     padding: 0px 25px ;
  }
  #bloc-5 div h3{
      font-size: 1rem;
@@ -307,15 +255,18 @@ position: relative;
     font-weight: lighter;
     font-size: 0.8rem;
 }
-#nous-contacter h3{
-    margin-top: 5px;
+#nous-contacter li{
+ font-size: 0.8rem;
+
+
 }#nous-contacter li{
     margin-top: 8px;
 }
 
 #reseaux{
-    display: grid;
-    grid-template-columns: 8% 8% 8% 8%;   
+    display: flex;
+    justify-content: space-around; 
+    width: 50%;
 }
 #nous-contacter span{
 font-family: "font-1", Arial, Helvetica, sans-serif;
@@ -327,7 +278,7 @@ bottom:0px;
 
 #bloc-6::before{
     content: "";
-    width: 1100px;
+    width: 80%;
     height: 2px;
     position: absolute;
     background: rgb(240, 235, 235);
@@ -382,6 +333,7 @@ text-transform: uppercase;
  }
  footer ul {
      display: flex;
+     flex-wrap: wrap;
      justify-content: space-around;
      align-items: flex-end;
      margin-top: 15px;
@@ -389,3 +341,53 @@ text-transform: uppercase;
  footer ul li{
      padding: 0px 18px;
  }
+
+/* Mobile */
+
+@media (max-width: 662px) {
+    
+    header nav{
+        display: none;
+    }
+    #bloc-1 img{
+      transform: translate(-10%);
+    }
+    #bloc-2{
+        flex-direction: column; 
+    }
+    .btn-bloc2{
+        margin-bottom: 20px;
+    }
+    #bloc-3{
+        display: flex;
+        flex-direction: column;
+    }
+    #bloc-3 p{
+        margin-top: 2px;
+    }
+    .btn-bloc3{
+        margin-top: 15px;
+    }
+
+    #bloc-4{
+       display: inline-block;
+    }
+
+    #bloc-5{
+        display: none;
+    }
+
+    #bloc-6{
+        display: none;
+    }
+
+    footer{
+        width: 100%;
+    }
+    
+    footer ul{
+        display: flex;
+      flex-wrap: nowrap;
+    
+    }
+}
