--- a/style.css
+++ b/style.css
@@ -33,30 +33,33 @@ display: flex;
 align-items: center;
 justify-content: space-around;
 text-transform: uppercase;
-font-size: 1rem;
 color: rgb(0, 0, 0);
-margin-top: 10px;
+margin-top: 30px;
 font-family: "font-1", Arial, Helvetica, sans-serif;
+max-width: 1100px;
+margin: 0 auto;
 }
 header nav ul li{
     font-family: "font-1", Arial, Helvetica, sans-serif;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-weight: bold;
 }
 nav #btn-nav{
     background: rgb(216, 212, 212);
-    padding: 5px 5px;
+    padding: 3px 5px;
     border-radius: 55px;
 }
+
 /* Bloc 1 */
 #bloc-1{
- background: url(./img/bg.jpg) center/cover;
+background: url(./img/bg.jpg) center/ cover;
 text-align: center;
 color: white;
 padding: 80px;
 text-transform: uppercase;
 font-family: 'font-2', Arial, Helvetica, sans-serif;
 margin-top: 10px;
+width: 100%;
 }
 h1{
     margin-top: 25px;
@@ -66,7 +69,7 @@ h1{
     background: none;
     padding: 11px;
     margin-top: 25px;
-    width: 320px;
+    width: 15rem;
     border: 1px solid white;
     font-family: 'font-2', Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -238,7 +241,7 @@ font-size: 1rem;
 }
 #parents p{
     font-family: "font-2", Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-weight: 700;
     padding-top: 15px;
     font-size: 0.8rem;
     letter-spacing: 0.9px;
@@ -357,13 +360,30 @@ text-transform: uppercase;
 
 /* Media queries */
 
+
+@media (max-width: 880px){
+    #bloc-1 img{
+        width: 80%;
+    }
+    header nav ul li{
+        font-size: 0.7rem;
+    }
+    nav #btn-nav{
+        background: rgb(216, 212, 212);
+        padding: 1px 3px;
+        border-radius: 30px;
+    }
+
 @media (max-width: 662px) {
     
     header nav{
         display: none;
     }
     #bloc-1 img{
-      transform: translate(-10%);
+      width: 70%;
+    }
+    #logo-bloc1{
+margin: 0 auto;
     }
     #bloc-2{
         flex-direction: column; 
