--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@ text-align: center;
 li{
     list-style: none; 
 }
-a{text-decoration: none;}
+a{text-decoration: none;
+color: black;
+}
 p{
     font-family: 'font-2',Arial, Helvetica, sans-serif;
     font-weight:700;
@@ -34,11 +36,12 @@ display: flex;
 align-items: center;
 justify-content: space-around;
 text-transform: uppercase;
-color: rgb(0, 0, 0);
-margin-top: 30px;
 font-family: "font-1", Arial, Helvetica, sans-serif;
 max-width: 1100px;
 margin: 0 auto;
+}
+nav{
+    padding: 15px;
 }
 header nav ul li{
     font-family: "font-1", Arial, Helvetica, sans-serif;
@@ -60,7 +63,6 @@ color: white;
 padding: 80px;
 text-transform: uppercase;
 font-family: 'font-2', Arial, Helvetica, sans-serif;
-margin-top: 10px;
 width: 100%;
 }
 h1{
@@ -104,6 +106,11 @@ color: black;
     color: white;
     padding: 50px;
     font-size: 0.8rem;
+}
+#bloc-2 > div {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 10px;
 }
 #bloc-2 img{
     display: block;
@@ -172,12 +179,14 @@ width: 100%;
     text-align: center;
     justify-items: center;
     justify-content: space-between; 
-    line-height: 18px;
+    line-height: 19px;
  }
 #bloc-4 > div{
     padding: 30px;
     position: relative;
-}/*Chevron */
+    width: 100%;
+}
+/*Chevron */
 .fas{
 font-size: 0.5rem;
 transform: translateX(30%);
@@ -189,7 +198,7 @@ transform: translateX(30%);
     box-shadow: 2px 2px 2px rgb(179, 174, 174);
     width: 100%;
     object-fit: cover;
-    height: 250px; 
+    max-height: 250px; 
 }
 #bloc-4 h5{
     font-family: "font-1",Arial, Helvetica, sans-serif;
@@ -229,9 +238,9 @@ transform: translateX(30%);
  }
 
  #bloc-5 > div{
-     width: 20%;
+     width: 30%;
      justify-content: center;
-     padding: 0px 25px ;
+     padding: 0px 20px ;
  }
  #bloc-5 div h3{
      font-size: 1rem;
@@ -255,6 +264,8 @@ transform: translateX(30%);
 color: gray;
 cursor: pointer;
 }
+
+/* Bloc 6 */
  #infos-pratiques h3{
 font-family: "font-1",Arial, Helvetica, sans-serif;
 font-size: 1rem;
@@ -281,7 +292,7 @@ cursor: pointer;
     font-weight: 700;
     padding-top: 15px;
     font-size: 0.8rem;
-    letter-spacing: 0.9px;
+    line-height: 18px;
 }
 
 #nous-contacter{
@@ -334,8 +345,10 @@ bottom: 20px;
      text-align: center;
      align-items: center;
      margin-top: 100px;
-     width: 100%;
+     width: 90%;
      position: relative;
+     margin: 0 auto;
+     margin-top: 100px;
  }
  #logo-presse img{
     padding: 10px;
